[package]
name = "agentmint"
version = "0.1.0"
edition = "2021"
description = "Cryptographic proof that a human authorized an AI agent action"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
